# LogoBgVanisher

./: .gitignore  .ruff.toml  BG_remover.py  HISTORY.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  python-package.yml  test.yml
logo_bg_vanisher/: __init__.py  cropper.py  folder_utils.py  main.py
src/: __init__.py  background_remover.py  cropper.py  folder_utils.py  gui.py  image_creator.py  main.py  remover_pillow.py  remover_rmbgr.py  saver.py  sizer.py
src/logo_bg_vanisher/: __init__.py  cropper.py  folder_utils.py  image_creator.py  remover_pillow.py  remover_rembg.py  remover_rmbgr.py  saver.py  sizer.py  utils_validation.py
tests/: test_cli_pillow.py  test_cli_rembg.py  test_crop.py  test_heic_to_png.py  test_resize.py  test_transparent.py
tests/heic/: electrical_outlet.HEIC
